--- a/css_folder/style.css
+++ b/css_folder/style.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap');
 
+/* npx tailwindcss -i css_folder/grid.css -o ./dist/output.css --watch  */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 * {
     box-sizing: border-box;
     margin: 0;
